[package]
name = "vptr"
version = "0.2.0"
authors = ["Olivier Goffart <ogoffart@woboq.com>"]
edition = "2018"
description = "Thin references to trait objects by embedding the virtual table pointer in the struct"
readme = "README.md"
license = "MIT"
keywords = ["vtable", "thin", "light", "trait", "virtual"]
categories = [ "memory-management" ]
repository = "https://github.com/ogoffart/vptr"
documentation = "https://docs.rs/vptr"

[features]
default = ["std"]
std = []

[dependencies]
vptr-macros = {path = "./macros", version = "=0.2.0"}
