[package]
name = "vptr-macros"
version = "0.1.0"
authors = ["Olivier Goffart <ogoffart@woboq.com>"]
description = "Procedural macros for the `vptr` crate"
edition = "2018"
license = "MIT"
repository = "https://github.com/ogoffart/vptr"
documentation = "https://docs.rs/vptr"


[lib]
path = "macros.rs"
proc-macro = true

[dependencies]
quote = "1"
syn = {version = "1", features = ["full", "extra-traits"]}

